[editor] New shortcut - Ctrl T toggles sidebar, vh fixes on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,7 @@ body {
 
 	display: flex;
 	height: 95vh;
+	height: calc(var(--vh, 1vh) * 95);
 	padding: 0;
 	margin: 0;
 	flex-direction: row-reverse;
@@ -28,6 +29,14 @@ pre, code {
 
 }
 
+pre, span {
+	width: 100%;
+	white-space: pre;
+	word-wrap: normal;
+	display: inline-block;
+	word-break: normal;
+}
+
 .controls {
 
 	flex: 1;
@@ -37,7 +46,9 @@ pre, code {
 .content {
 
 	flex: 10;
-	height: 100%;
+	max-height: 100%;
+	max-width: 100%;
+	overflow-wrap: break-word;
 
 }
 
@@ -104,6 +115,7 @@ footer {
 	bottom: 0px;
 	left: 0px;
 	width: 100vw;
+	width: calc(var(--vw, 1vw) * 100);
 	background: #222;
 
 }
@@ -121,6 +133,13 @@ footer {
 	text-decoration: none;
 	font-weight: bold;
 	margin: 0 0.5em;
+
+}
+
+.footer-keybindings {
+
+	margin-right: auto;
+	margin-left: 1.5em;
 
 }
 
